# nanodqn

./: .gitignore  .gitmodules  .justfile  Dockerfile  LICENSE  README.md  cleanrl.py  evaluate.py  flake.nix  helpers.py  justfile  main.py  models.py  new_main.py  pyproject.toml  replay_buffer.py  run.sh  test_pic.py
configs/: acrobot.yaml  config.yaml  mountain_car.yaml
configs/sweeps/: env_sweep.yaml  exploration_sweep.yaml  lr_sweep.yaml
docs/: plots
